[MSAFD][WS2_32] - Properly return error codes from WSPConnect CORE-12787 #resolve

svn path=/trunk/; revision=73849